# Blazar

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main.sh
.cache/clangd/index/: concepts.hpp.3ABF3972DEE3D0E6.idx  exceptions.hpp.8C80C1497DBD6130.idx  indexing.hpp.FCB9A5C61663F741.idx  io.cpp.8B01A5033857ED70.idx  layout.h.002AD36D26CF93F8.idx  main.cpp.011816DC77633843.idx  shape.hpp.1FCD6CE8492FD8A9.idx  strides.hpp.8B6FFB55D0AC5ED9.idx  types.h.17BF1FE20C0A6E76.idx  types.hpp.CDD72958A19C1548.idx
___trash/: main.cpp
___trash/graph/: edges.hpp
___trash/graph/graph/: nodes.cpp  vertices.cpp
___trash/trash/include/blazar/: concepts.hpp  exceptions.hpp  expressions.hpp  functions.hpp  operations.hpp  slices.hpp  strides.hpp  symbols.hpp  tensors.hpp  traits.hpp  types.hpp  variables.hpp
___trash/trash/include/blazar/core/: graph.h  layout.h  memory.h
___trash/trash/src/: memory.cpp
___trash/trash/tests/: test-layout.cpp
docs/: Install.md
include/blazar/: concepts.hpp  environments.hpp  exceptions.hpp  execution.hpp  expressions.hpp  functions.hpp  graph.hpp  handlers.hpp  indexing.hpp  layouts.hpp  memory.hpp  nodes.hpp  operations.hpp  resources.hpp  shape.hpp  storage.hpp  strides.hpp  symbols.hpp  tensors.hpp  trace.hpp  traits.hpp  types.hpp  variables.hpp  views.hpp
include/blazar/core/: execution.h  graph.h  layout.h  layouts.h  memory.h  symbols.h  trace.h  types.h
include/blazar/expressions/: expression.hpp  functions.hpp  functors.hpp  operations.hpp  operators.hpp  transformations.hpp  variables.hpp  views.hpp
include/blazar/expressions/views/: slice.hpp
include/blazar/layout/: indexing.hpp  shape.hpp  slicing.hpp  strides.hpp
include/blazar/resources/: domains.hpp  memory.hpp  storage.hpp
include/blazar/runtime/: domains.hpp  memory.hpp  storage.hpp
src/: domains.cpp  execution.cpp  graph.cpp  handlers.cpp  io.cpp  memory.cpp  nodes.cpp  resources.cpp  storage.cpp  trace.cpp  variables.cpp
src/cpu/: ops-unary.hpp
src/expressions/: operations.cpp
tests/: CMakeLists.txt  test-layout.cpp  test-layouts.cpp  test-operations.cpp  test-shape.cpp  test-storage.cpp  test-strides.cpp  test-types.cpp
trash/: pointers.hpp
trash/graph/: graph.hpp  nodes.hpp  vertices.hpp
trash/graph/graph/: edges.cpp
